if (!is_ios) {
  # skip something...
  executable("quic_server") {
    # skip...
  }
  shared_library("libbequic") {
    sources = [
      "tools/quic/basic_streambuf.hpp",
      "tools/quic/basic_streambuf_fwd.hpp",
      "tools/quic/be_quic_define.h",
      "tools/quic/be_quic.h",
      "tools/quic/be_quic.cc",
      "tools/quic/be_quic_block.h",
      "tools/quic/be_quic_block.cc",
      "tools/quic/be_quic_client.h",
      "tools/quic/be_quic_client.cc",
      "tools/quic/be_quic_client_manager.h",
      "tools/quic/be_quic_client_manager.cc",
      "tools/quic/be_quic_client_message_loop_network_helper.h",
      "tools/quic/be_quic_client_message_loop_network_helper.cc",
      "tools/quic/be_quic_fake_proof_verifier.h",
      "tools/quic/be_quic_fake_proof_verifier.cc",
      "tools/quic/be_quic_spdy_client.h",
      "tools/quic/be_quic_spdy_client.cc",
      "tools/quic/be_quic_spdy_client_session.h",
      "tools/quic/be_quic_spdy_client_session.cc",
      "tools/quic/be_quic_spdy_client_stream.h",
      "tools/quic/be_quic_spdy_client_stream.cc",
      "tools/quic/buffer.hpp",
      "tools/quic/streambuf.hpp",
    ]
    deps = [
      ":net",
      ":simple_quic_tools",
      "//base",
      "//build/win:default_exe_manifest",
      "//url",
    ]
    defines = [ "BE_QUIC_EXPORTS", "BE_QUIC_SHARED_LIBRARY" ]
  }
  # skip something...
}
